RESOLVED FIXED282043
B3LowerInt64 makes incorrect assumption about the heap size
https://bugs.webkit.org/show_bug.cgi?id=282043
Summary B3LowerInt64 makes incorrect assumption about the heap size
Angelos Oikonomopoulos
Reported 2024-10-24 06:07:37 PDT
The access range for a MemoryValue can be arbitrarily wide.
Attachments
Angelos Oikonomopoulos
Comment 1 2024-10-24 06:10:48 PDT
EWS
Comment 2 2024-10-24 11:08:23 PDT
Committed 285660@main (241c8040ba4d): <https://commits.webkit.org/285660@main> Reviewed commits have been landed. Closing PR #35675 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-24 11:09:15 PDT
Note You need to log in before you can comment on or make changes to this bug.