Fix incorrect heap range assumption in B3LowerInt64 https://bugs.webkit.org/show_bug.cgi?id=282043

Reviewed by Yusuke Suzuki.

A memory access may reference an arbitrarily large area.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:

Canonical link: https://commits.webkit.org/285660@main